[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "/egytech_api/*.py",
  "/tests",
]

[project]
name = "egytech_api"
version = "1.0.0"
authors = [{name="Abdulrahman Mustafa Abdulrahman", email="abdulrahman.m.khaled@outlook.com"}]
description = "A Python API Wrapper for the EgyTech.FYI API"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic==2.7.3",
    "httpx",
    "tomli",
    "pandas",
    "xlsxwriter",
]
