[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "/egytech_api/*.py",
  "/tests",
]

[project]
name = "egytech_api"
version = "1.0.2"
authors = [{name="Abdulrahman Mustafa Abdulrahman", email="abdulrahman.m.khaled@outlook.com"}]
description = "A Python API Wrapper for the EgyTech.FYI API"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["egytech", "api", "wrapper", "egytech.fyi", "egytech api"]
classifiers = ["Development Status :: 3 - Alpha",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic==2.7.3",
    "httpx",
    "tomli",
    "pandas",
    "xlsxwriter",
]

[project.urls]
Documentation = "https://abdulrahman-mustafa.gitbook.io/egytech-fyi-python-wrapper"
"Source Code" = "https://github.com/Abdulrahman-Mustafa-Abdulrahman/egytech-api"

