[tool.poetry]
name = "egytech-api"
version = "1.0.2"
description = "A Python API Wrapper for the EgyTech.FYI API"
authors = ["Abdulrahman Mustafa Abdulrahman <abdulrahman.m.khaled@outlook.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
httpx = "^0.27.0"
tomli = "^2.0.1"
xlsxwriter = "^3.2.0"
pydantic = "^2.7.4"
ruff = "^0.4.9"
pytest = "^8.2.2"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "egytech_api"
version = "1.0.2"
authors = [{ name = "Abdulrahman Mustafa Abdulrahman", email = "abdulrahman.m.khaled@outlook.com" }]
description = "A Python API Wrapper for the EgyTech.FYI API"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["egytech", "api", "wrapper", "egytech.fyi", "egytech api"]
classifiers = ["Development Status :: 3 - Alpha",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic==2.7.3",
    "httpx",
    "tomli",
    "pandas",
    "xlsxwriter",
]

[project.urls]
Documentation = "https://abdulrahman-mustafa.gitbook.io/egytech-fyi-python-wrapper"
"Source Code" = "https://github.com/Abdulrahman-Mustafa-Abdulrahman/egytech-api"
